Fixed z-index for menu.

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ body {
     background: #75e3fe;
     color: #333333;
     list-style: square;
+    z-index: 5;
 }
 
 .menu-lvl3 {
@@ -242,6 +243,9 @@ body {
     text-decoration: none;
 }
 
+
+/*ELEMENTS --- CONTAINER*/
+
 .product-block__item {
     position: relative;
     background-color: #ffffff;
@@ -253,9 +257,6 @@ body {
     margin-bottom: 30px;
     padding: 10px;
 }
-
-
-/*ELEMENTS --- CONTAINER*/
 
 .product-block__header {
     height: 80px;
@@ -656,7 +657,6 @@ body {
     font-size: 12px;
     font-weight: 400;
     line-height: 12px;
-    /*	margin-bottom: 15px;*/
 }
 
 .footer-block__wrapper--news {
